--- a/_data/company.yml
+++ b/_data/company.yml
@@ -1,6 +1,3 @@
-title: Urban Ltd
-description: Bringing the best experiences to the web for you and your clients.
-contact_email_address: contact@example.com
-contact_phone_number: (03) 123 4567
-address: 123 Example Street, Gooseburb, 9876, Ducktown, New Zealand
-postal_address: PO Box 123, Ducktown, New Zealand
+title: Lina Lab
+description: K17, CSE, UNSW, Sydney, NSW 2052, Australia 
+
