--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,12 @@
-title: LINA LAB
-url: "linayao.com"
+title: Lina Lab
+url: "http://linayao.com"
 baseurl:
 google_analytics_key:
 google_maps_javascript_api_key:
 disqus_shortname:
 
 # Default description in social shares for the jekyll-seo-tag gem
-description: LINA LAB.
+description: Lina Lab.
 
 # Author details for the jekyll-seo-tag gem
 author:
