--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Lina Lab
+title: insData
 url: "http://linayao.com"
 baseurl:
 google_analytics_key:
@@ -6,7 +6,7 @@ google_maps_javascript_api_key:
 disqus_shortname:
 
 # Default description in social shares for the jekyll-seo-tag gem
-description: Lina Lab.
+description: focusing on computing and data science.
 
 # Author details for the jekyll-seo-tag gem
 author:
