--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,7 +5,7 @@ links:
   link: /people/
 - name: Publication
   link: /publication/
-- name: opensource
+- name: Opensource
   link: /opensource/
 - name: Calendar
   link: /calendar/
