--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -7,6 +7,8 @@ links:
   link: /publication/
 - name: GroupWiki
   link: /blog/
+- name: Opensource
+  link: /opensource/
 - name: Calendar
   link: /calendar/
 - name: Contact
