--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: InsData
 url: "http://linayao.com"
-baseurl:
+baseurl: "http://insdata.org/"
 google_analytics_key:
 google_maps_javascript_api_key:
 disqus_shortname:
